# fireshader

./: .gitignore  CMakeLists.txt  README.md
2DOldProject/GameLogic/: Game.cpp  Game.h
2DOldProject/GameObjects/: ParticleGenerator.cpp  PowerUp.h
3DOldProject/: CameraTesting.cpp  FireScene.cpp  GeometrySnake.cpp  GeometryTexture.cpp  ModelTestingScene.cpp  Particles.cpp  Shader.cpp  SoundEngine.cpp  main.cpp
3DOldProject/Objects/: Flame.h  LightEmissorCube.cpp  LightEmissorCube.h  LitCube.cpp  LitCube.h  Object3D.cpp  Object3D.h  TexturedLitMesh.cpp  TexturedLitMesh.h  TexturedLitPlane.cpp  TexturedLitPlane.h  TexturedUnlitCube.cpp  TexturedUnlitCube.h
3DOldProject/shaders notes and tests/: MatrixColor.fragment  fragmentshader.glsl
assets/levels/: 2P-four.lvl  2P-three.lvl
assets/mesh/: Llama1.mtl  Llama2.mtl
assets/shaders/: Flame.vs  LitColorMatrix.fs  LitTexturedMatrix.fs  LitTexturedMatrix.vs  TextureMatrix.fs  postprocess.fs  rename_shaders.py
glfw/: .travis.yml  CMakeLists.txt
glfw/backups/: Shader.cpp.backup  Shader.h.backup  SnakeGeometry.cpp  SnakeGeometry.h
glfw/docs/: extra.less
glfw/include/GLFW/: glfw3.h
glm/: CMakeLists.txt
src/: AudioEngine.cpp  AudioEngine.h  Camera3D.cpp  Camera3D.h  CubesTestingScene.cpp  CubesTestingScene.h  FireScene.cpp  FireScene.h  LightEmissor.cpp  LightEmissor.h  LightTestScene.cpp  LightTestScene.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Object3D.cpp  Object3D.h  ResourceManager.cpp  ResourceManager.h  Scene.h  Spark.cpp  Spark.h  main.cpp  resources.rc
src/GameLogic/: Game.cpp  Game.h  Selector.cpp  Selector.h  TwoPlayersGame.cpp  TwoPlayersLevel.cpp  TwoPlayersLevel.h
src/GameObjects/: BallObject.cpp  BallObject.h  GameObject2D.cpp  GameObject2D.h  ParticleGenerator.h
src/Rendering/: LightEmissor.cpp  LightEmissor.h  PostProcessor.cpp  PostProcessor.h  Shader.cpp  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h
src2DOldProject/GameLogic/: GameLevel.cpp  GameLevel.h  TwoPlayersGame.h
src3DOldProject/: FireScene.cpp  GeometryTexture.cpp  ModelTestingScene.cpp  Scene.h  Shader.cpp.backup  Shader.cpp.h.backup  SoundEngine.h
src3DOldProject/Objects/: Flame.cpp  Flame.h  LitCube.cpp  LitCube.h  NormalMapMesh.cpp  NormalMapMesh.h  TexturedLitMesh.cpp  TexturedLitMesh.h  TexturedLitPlane.cpp  TexturedLitPlane.h  TexturedUnlitCube.cpp  TexturedUnlitCube.h
src3DOldProject/shaders notes and tests/: MatrixColor.vertex  colorTextureMatrixAlpha.fragment  shadersnotes.glsl  vertexshader.glsl
